# CursedWordsTGBot

./: .gitignore  CMakeLists.txt  README.md  build-local.sh  docker-compose-run-tests.sh  docker-compose.yml  functional_tests_enviroment.sh  main.cpp
.github/workflows/: ci.yml
ClassifierClient/: client.hpp
ClassifierClient/grpc/: CMakeLists.txt  client.cpp  client.hpp  toxicity_classifier.pb.cc  toxicity_classifier.pb.h  toxicity_classifier.proto
ClassifierClient/grpc/generated_python/: toxicity_classifier_pb2.py
CursedWordsTGBot/: CMakeLists.txt  main.cpp  run_bot.hpp
Modules/: CMakeLists.txt
Modules/Classificator/: CMakeLists.txt  classificator.cpp  classificator.hpp
Modules/Queue/: queue.hpp
Modules/Reactor/: CMakeLists.txt  reactor.cpp  reactor.hpp
Modules/Server/: CMakeLists.txt  server.cpp  server.hpp
Modules/Task/: task.cpp  task.hpp
Modules/Worker/: worker.cpp
ServerGrpc/: CMakeLists.txt
Tests/FunctionalTests/: CMakeLists.txt  messages.txt
Tests/FunctionalTests/CursedWordsTest/: CMakeLists.txt  checker.cpp  checker.hpp  checker_main.cpp  cursedWordsTest.cpp  cursedWordsTest.hpp  generator.cpp  generator.hpp  generator_main.cpp  main.cpp  messages.txt  running_bot_main.cpp
Tests/FunctionalTests/EchoBotTest/: CMakeLists.txt  echoBotTest.cpp  echoBotTest.hpp  messages.txt
Tests/FunctionalTests/Test_of_echo_bot/: CMakeLists.txt  messages.txt  test_of_echo_bot.cpp  test_of_echo_bot.hpp
Tests/UnitTests/Queue_Tests/: multithreaded_tests.cpp  multithreaded_tests.hpp  test.cpp  test.hpp
common_images/: Dockerfile.base
common_images_python/: Dockerfile.python  requirements.txt
grpcClientLibrary/: CMakeLists.txt  client.cpp
server_grpc/: server.py  toxicity_classifier_pb2.pyi
